--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -42,6 +42,8 @@
   display: -ms-grid;
   display: grid;
       grid-template-areas: "noBlend-and-Blend";
+  -ms-grid-rows: 25vh;
+      grid-template-rows: 25vh;
   -ms-grid-column-align: center;
       justify-self: center;
   -ms-grid-row-align: center;
@@ -60,34 +62,52 @@
       align-self: center;
   color: white;
   font-family: "Trebuchet MS";
+  border: 2px solid green;
 }
 
 .bingoResult .matchedBlends {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-grid-row-align: center;
+      align-self: center;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: noBlend-and-Blend;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 10vh 10vh;
-      grid-template-rows: 10vh 10vh;
-      grid-template-areas: "text" "icon";
-  -ms-grid-column-align: center;
-      justify-self: center;
-  -ms-grid-row-align: center;
-      align-self: center;
+  border: 2px solid green;
+  -ms-grid-rows: 40% 50%;
+      grid-template-rows: 40% 50%;
+  grid-row-gap: 10%;
+      grid-template-areas: "textArea" "iconArea";
+}
+
+.bingoResult .matchedBlends .animatedText {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: textArea;
+  font-size: 2.8vh;
+  color: white;
+  font-family: "Trebuchet MS";
 }
 
 .bingoResult .matchedBlends .action {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
-  grid-area: icon;
-  top: 150vh;
+  grid-area: iconArea;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  max-height: 300px;
-  height: 25vw;
-  max-width: 300px;
-  width: 25vw;
+  max-height: 10vh;
+  min-height: 7vh;
+  height: 10vw;
+  max-width: 10vh;
+  min-width: 7vh;
+  width: 10vw;
 }
 
 .bingoResult .matchedBlends .action .confetti, .bingoResult .matchedBlends .action .confetti--purple {
@@ -182,8 +202,8 @@
 .bingoResult .matchedBlends .trophy {
   z-index: 1;
   background-color: #fff;
-  height: 50%;
-  width: 50%;
+  height: 100%;
+  width: 100%;
   border-radius: 100%;
   -webkit-animation: trophy 0.5s 1 forwards;
           animation: trophy 0.5s 1 forwards;
